--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -1,9 +1,20 @@
 {
   "AppSettings": {
-    "ApplicationTitle": "Automobile Service Center Application"
+    "ApplicationTitle": "Automobile Service Center Application",
+    "AdminEmail": "phucminh571@gmail.com",
+    "AdminName": "Admin",
+    "AdminPassword": "P@ssw0rd",
+    "EngineerEmail": "banphuf29966@gmail.com",
+    "EngineerName": "Engineer",
+    "EngineerPassword": "P@ssw0rd",
+    "Roles": "Admin,User,Engineer",
+    "SMTPServer": "smtp.gmail.com",
+    "SMTPPort": "587",
+    "SMTPAccount": "longhoang7771@gmail.com",
+    "SMTPPassword": "mqjkxnralgzxwcvx"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASC.Web-fcd5c826-9463-4122-af70-1217c81243c1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=CUBO\\SQLEXPRESS;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
