--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -14,7 +14,8 @@
     "SMTPPassword": "mqjkxnralgzxwcvx"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=CUBO\\SQLEXPRESS;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=CUBO\\SQLEXPRESS;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True",
+    "ASCWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ASC.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
