--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -10,12 +10,12 @@
     "Roles": "Admin,User,Engineer",
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
-    "SMTPAccount": "longhoang7771@gmail.com",
-    "SMTPPassword": "mqjkxnralgzxwcvx"
+    "SMTPAccount": "2224802010927@student.tdmu.edu.vn",
+    "SMTPPassword": "juak jlej ftgf ncpk"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=CUBO\\SQLEXPRESS;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True",
-    "ASCWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ASC.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ASCWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ASC.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
   },
   "Logging": {
     "LogLevel": {
