--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -17,6 +17,12 @@
     "DefaultConnection": "Data Source=CUBO\\SQLEXPRESS;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True",
     "ASCWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ASC.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
   },
+  "Google": {
+    "Identity": {
+      "ClientId": "248161345881-5e5ara3nm3h02sqebflhkaq3mp1emlhk.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
