--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -29,5 +29,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CacheSettings": {
+    "CacheConnectionString": "127.0.0.1:6379",
+    "CacheInstance": "ASCInstance"
+  },
   "AllowedHosts": "*"
 }
